<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/cart_24"
            android:title="@string/my_cart"/>

        <item
            android:id="@+id/nav_tables"
            android:icon="@drawable/baseline_table_restaurant_24"
            android:title="@string/tables"/>

        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/my_account"/>

        <item
            android:id="@+id/nav_store_locator"
            android:icon="@drawable/location_pin_24"
            android:title="@string/store_locator"/>

        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/baseline_orders"
            android:title="@string/my_orders"/>

    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/baseline_exit_to_app_24"
                android:title="@string/logout"
                />
        </menu>

    </item>

</menu>