<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/product_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6_seater_dining_table_for_family"
        android:textColor="@color/black"
        android:fontFamily="@font/medium"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/product_category_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_tables"
        android:textColor="@color/black"
        android:fontFamily="@font/book"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_title_tv"/>

    <TextView
        android:id="@+id/product_place_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/future_furniture_center"
        android:textColor="@color/jet_black"
        android:fontFamily="@font/book"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_category_tv"
        />

</androidx.constraintlayout.widget.ConstraintLayout>