<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.EditProfileScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90"/>

        <include
            android:id="@+id/edit_profile_title"
            layout="@layout/edit_profile_title_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/profile_iv"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintTop_toBottomOf="@id/edit_profile_title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@id/profile_iv"
            style="@style/TextInputLayout">

            <EditText
                android:drawableStart="@drawable/baseline_person_24"
                android:id="@+id/first_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:fontFamily="@font/medium"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@id/first_name_tv"
            style="@style/TextInputLayout">

            <EditText
                android:drawableStart="@drawable/baseline_person_24"
                android:id="@+id/last_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:fontFamily="@font/medium"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@id/last_name_tv"
            style="@style/TextInputLayout">

            <EditText
                android:drawableStart="@drawable/baseline_email_24"
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:fontFamily="@font/medium"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@id/email_tv"
            style="@style/TextInputLayout">

            <EditText
                android:drawableStart="@drawable/baseline_phone_android_24"
                android:id="@+id/phone_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:fontFamily="@font/medium"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birth_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@id/phone_number_tv"
            style="@style/TextInputLayout">

            <EditText
                android:drawableStart="@drawable/cake_24"
                android:id="@+id/birth_date_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="08-11-1857"
                android:fontFamily="@font/medium"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/edit_profile_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="SUBMIT"
            android:backgroundTint="@color/white"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintTop_toBottomOf="@id/birth_date_tv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>